# python-bindings-summer-school-2026

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_and_deploy_slides.yml  test_ubuntu.yml
exercice_1/solution/: CMakeLists.txt  README.md  notes.md  pyproject.toml
exercice_1/solution/src/plunge/: _plunge.cxx
exercice_2/: CMakeLists.txt  test_thermolib.f90
exercice_2/src/: thermo_constants.f90  thermo_moisture.f90  thermo_radiation.f90  thermolib.f90
exercise_1/: CMakeLists.txt  README.md  pyproject.toml
exercise_1/solution/: CMakeLists.txt  README.md  pyproject.toml  setup.py
exercise_1/solution/src/: plunge.cxx
exercise_1/solution/src/plunge/: __init__.py
exercise_1/src/: plunge.cxx
exercise_1/tests/: test_plunge.py
exercise_2/: CMakeLists.txt  README.md
exercise_2/apps/: live_plot.py
exercise_2/include/nbody/: simulation.h
exercise_2/python/: CMakeLists.txt  nbody_pymodule.cpp
exercise_2/solution/: .clang-format  pyproject.toml
exercise_2/solution/apps/: live_plot.py
exercise_2/solution/python/: nbody_pymodule.cpp
exercise_2/src/: plunge_pyb.cpp
exercise_3/solution/: CMakeLists.txt
exercise_3/solution/apps/: live_plot.py  run_simple.cpp
exercise_3/solution/include/: simulation.h
exercise_3/solution/include/nbody/: simulation.h
exercise_3/solution/python/: nbody_pymodule.cpp
exercise_3/solution/src/: simulation.cpp
slides/: _quarto.yml  fortran.qmd  index.qmd  introduction.qmd  outro.qmd  pybind.qmd  python_extension_modules.qmd  requirements.txt
slides/assets/: custom.scss
slides/images/: carrack.avif  ocean-liner.avif
solutions/exercise_1/: README.md
solutions/exercise_2/: .clang-format  pyproject.toml
solutions/exercise_2/apps/: live_plot.py
solutions/exercise_2/src/: plunge_pyb.cpp
solutions/exercise_2/tests/: test_plunge.py
